fixed wave too high

--- a/resources/scss/_home.scss
+++ b/resources/scss/_home.scss
@@ -6,17 +6,17 @@
 
 // en haut de 1100 ca sapplique
 
-    .div_home_page_middlewave {
+.div_home_page_middlewave {
 
-        padding: 0 10px !important;
+    padding: 0 10px !important;
 
-        p {
-            text-align: center;
-            width: 100% !important;
-            padding: 0 10px 62px 10px !important;
-            font-size: 1.5rem !important;
-        }
+    p {
+        text-align: center;
+        width: 100% !important;
+        padding: 0 10px 62px 10px !important;
+        font-size: 1.5rem !important;
     }
+}
 
 
 .home {
@@ -24,6 +24,7 @@
     .wave_top_section {
         width: 100vw;
         position: relative;
+        max-height: 900px;
 
 
 
@@ -395,4 +396,35 @@
         }
     }
 
+}
+
+@media (min-width: 700px) {
+    .ship_range_section {
+
+        img {
+            position: absolute;
+            top: -10rem !important;
+        }
+    }
+
+}
+
+
+@media (min-width: 1500px) {
+    .topWave {
+        position: relative;
+        top: -100px;
+    }
+
+    .menu-home-link-div {
+        z-index: 99;
+    }
+
+    .saladeImg {
+        position: absolute;
+        width: 50vw !important;
+        max-width: 675px;
+        bottom: -70px !important;
+        right: 2%;
+    }
 }
